# cloudgime-host-installer

./: .gitignore  .gitmodules  Cargo.toml  LOCAL_CODEX_PATCH_RAW.txt  build-windows.ps1  buildAll.ps1  justfile  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
common/: Cargo.toml
common/src/: api_bindings.rs  api_bindings_ext.rs  config.rs  ipc.rs  lib.rs
payload-seed/drivers/fallback-audio/: README.txt  install-audio.bat  package.json  package.template.json
payload-seed/drivers/fallback-audio/payload/symo-x64-release/: VirtualAudioDriver.inf  VirtualAudioDriver.sys  virtualaudiodriver.cat
payload-seed/drivers/virtual-display-driver/: vdd_settings.xml
runtime/sunshine-legacy/: RUNTIME_SLOT.txt  sunshine_runtime_info.json
runtime/sunshine/config/: apps.json  sunshine.conf
runtime/sunshine/scripts/: install-gamepad.bat  uninstall-gamepad.bat
src/: cli.rs  human_json.rs  main.rs  web.rs
src/api/: admin.rs  android_native.rs  auth.rs  mod.rs  response_streaming.rs  stream.rs
src/app/: auth.rs  host.rs  mod.rs  password.rs  user.rs
src/app/storage/: mod.rs
src/app/storage/json/: mod.rs  serde_helpers.rs  versions.rs
streamer/: Cargo.toml
streamer/src/: audio.rs  buffer.rs  convert.rs  dynamic_ice_servers.rs  gamepad_sidecar.rs  main.rs  video.rs
streamer/src/transport/: mod.rs
streamer/src/transport/web_socket/: mod.rs
streamer/src/transport/webrtc/: audio.rs  microphone.rs  mod.rs  sender.rs  video.rs
streamer/src/transport/webrtc/video/: annexb.rs  av1.rs
streamer/src/transport/webrtc/video/h264/: mod.rs  payloader.rs  reader.rs
streamer/src/transport/webrtc/video/h265/: mod.rs  payloader.rs  reader.rs
tools/: copy_native_bridge.cjs  host-cargo.ps1  setup-build-environment.ps1  sync_runtime_static.cjs  version_dist_imports.cjs
tools/portable/: build-host-offline-installer.ps1  build_bundle_process_manager.ps1  build_portable_host_bundle.ps1  make_portable_mon.bat  make_portable_mon.ps1  start_portable_mon.bat  start_portable_mon.ps1  sync-installed-host-to-source.ps1
tools/portable/BundleProcessManager/: BundleProcessManager.csproj  Program.cs
tools/portable/DisplayPrepareHelper/: DisplayPrepareHelper.csproj  Program.cs
tools/portable/GamepadSidecar/: GamepadSidecar.csproj  Program.cs
tools/portable/HostControlApp.Tauri/: .gitignore  finalize-installed-bundle.cmd  index.html  install-program-files.cmd  package-lock.json  package.json  publish-release.cmd  validate-end-to-end.cmd
tools/portable/HostControlApp.Tauri/installer/: CloudgimeHostControl.nsi  build-nsis.cmd  prepare-nsis-payload.cmd
tools/portable/HostControlApp.Tauri/src/: App.css  App.tsx  api.ts  types.ts
tools/portable/HostControlApp.Tauri/src-tauri/: Cargo.toml  tauri.conf.json
tools/portable/HostControlApp.Tauri/src-tauri/src/: host_control.rs  lib.rs  main.rs
tools/portable/HostControlBootstrap/: HostControlBootstrap.csproj  Program.cs
tools/portable/HostControlLauncher/: HostControlLauncher.csproj  Program.cs
tools/portable/HostControlPackaging/: Program.cs
tools/portable/HostEmergencyUninstaller/: HostEmergencyUninstaller.csproj  Program.cs
tools/portable/HostKeepAwakeAgent/: HostKeepAwakeAgent.csproj  Program.cs
tools/portable/managed-bundle-seed/: shared_pair_info.json
tools/portable/managed-bundle-seed/sunshine-shared/: sunshine_state.json
tools/portable/managed-bundle-seed/sunshine-shared/credentials/: cacert.pem  cakey.pem
web/: admin.html  admin.ts  api.ts  config_.ts  default_settings.ts  experimental_apis.d.ts  gate_motion.html  index.html  index.ts  manifest.json  open-native.html  screen_keyboard.ts  shared-player2.html  stream.html  stream.ts  util.ts
web/.well-known/: assetlinks.json
web/component/: context_menu.ts  error.ts  fetch_list.ts  index.ts  input.ts  list.ts  settings_menu.ts
web/component/game/: index.ts  list.ts
web/component/host/: add_modal.ts  index.ts  list.ts
web/component/modal/: form.ts  index.ts  login.ts
web/component/sidebar/: index.ts
web/component/user/: add_modal.ts  detailed_page.ts  index.ts  list.ts  role_select.ts
web/libopenh264/: decoder.d.ts  index.ts
web/libopus/: index.ts  libopus.js
web/mockups/: smokey_enterprise_preview.html
web/polyfill/: abort_controller.ts  index.ts  ios_right_click.ts
web/resources/: index.ts
web/stream/: buffer.ts  chrome_icons.ts  gamepad.ts  index.ts  input.ts  keyboard.ts  log.ts  mic_sidecar.ts  mouse.ts  stats.ts  video.ts
web/stream/audio/: audio_buffer_pipe.ts  audio_context_base.ts  audio_context_destination.ts  audio_context_track_pipe.ts  audio_decoder_pipe.ts  audio_element.ts  depacketize_pipe.ts  index.ts  media_stream_track_generator_pipe.ts  opus_decoder_pipe.ts  pipeline.ts
web/stream/pipeline/: index.ts  pipes.ts  worker.ts  worker_io.ts  worker_pipe.ts  worker_types.d.ts
web/stream/transport/: index.ts  web_socket.ts  webrtc.ts
web/stream/video/: annex_b_translator.ts  canvas.ts  canvas_frame.ts  depackitize_pipe.ts  index.ts  media_source_decoder.ts  media_stream_track_generator_pipe.ts  media_stream_track_processor_pipe.ts  offscreen_canvas.ts  openh264_decoder_pipe.ts  pipeline.ts  video_decoder_pipe.ts  video_element.ts  video_frame.ts  video_track_generator.ts
web/styles/: index.ts  moonlight.css  smokey_enterprise_preview.css  standard.css
