cargo-features = ["profile-rustflags"]

[workspace]
resolver = "3"
members = ["common", "streamer", "./"]
default-members = ["streamer", "./"]

[profile.release]
# strip release information
rustflags = ["-Zremap-cwd-prefix=.", "-Zlocation-detail=none"]

[workspace.package]
version = "2.6.0"
license = "GPL-3.0-or-later"

[workspace.dependencies]
moonlight-common = { git = "https://github.com/MrCreativ3001/moonlight-common-rust.git", rev = "7ab3e3f5ab50e21b64153bec2104ed2bac1f4313", features = [
    "tokio",
    "tokio-hyper",
    "openssl",
    "stream-c",
    "serde",
], default-features = false }
common = { path = "./common" }
# TODO: remove some dependencies that were moved into the other repo

# Log
log = "0.4.28"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
tracing-actix-web = "0.7.21"
venator = "1.1.0"

# Cli
clap = { version = "4.5.53" }

# Util
slab = "0.4.10"
ts-rs = "11.0.1"
async-trait = "0.1.89"

# Async
tokio = { version = "1.47.1" }
async-stream = "0.3.6"
futures = "0.3.31"
bytes = "1.11.1"

# -- Http / Https
# other
# TODO: make moonlight common rust use the latest version
uuid = { version = "0.8.2" }
hex = { version = "0.4.3" }
url = { version = "2.5.4" }
roxmltree = { version = "0.20.0" }
form_urlencoded = { version = "1.2.1" }

# WebRTC
webrtc = "0.17.1"

# Actix
actix-web = { version = "4.11.0" }
actix-files = "0.6.6"
actix-ws = "0.3.0"

# OpenSSL / Crypto
openssl = "0.10.67"
# version required for cross-rs, higher version don't compile for some reason
openssl-src = "=300.5.3"
openssl-sys = "=0.9.109"
pem = "3.0.5"
rustls = "0.23.36"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Error
anyhow = "1.0.99"
thiserror = "2.0.16"

# Numbers
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

# Sys
bindgen = { version = "0.72.0" }
cmake = { version = "0.1.54" }

[patch."https://github.com/MrCreativ3001/moonlight-common-rust.git"]
moonlight-common = { path = "./vendor/moonlight-common-rust" }
moonlight-common-sys = { path = "./vendor/moonlight-common-rust/moonlight-common-sys" }

[workspace.lints.clippy]
too_many_arguments = "allow"
unwrap_used = "warn"

[package]
name = "web-server"
version.workspace = true
edition = "2024"
license = { workspace = true }
default-run = "web-server"

[dependencies]
moonlight-common = { workspace = true }
common = { workspace = true }

# TODO: remove when cross-rs compiles, fix openssl versions
openssl-src.workspace = true
openssl-sys.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }

clap = { workspace = true, features = ["derive", "env"] }

actix-web = { workspace = true, features = ["openssl"] }
openssl = { workspace = true }
rustls = { workspace = true }
actix-files = { workspace = true }
actix-ws = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-actix-web = { workspace = true }
venator.workspace = true

anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
pem = { workspace = true }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }

async-stream = { workspace = true }
futures = { workspace = true }
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
hex.workspace = true
url.workspace = true
sha2 = "0.10.9"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
stun = "0.17.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Console", "Win32_System_Diagnostics_ToolHelp", "Win32_System_JobObjects", "Win32_System_RemoteDesktop", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
windows-service = "0.8.0"

[lints]
workspace = true
