[package]
name = "common"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true }

tokio = { workspace = true, features = [
    "process",
    "rt",
    "io-util",
    "io-std",
    "sync",
] }

bytes = { workspace = true, features = ["serde"] }

pem = { workspace = true, features = ["serde"] }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true, features = ["serde"] }
tracing = { workspace = true }

ts-rs = { workspace = true, features = ["uuid-impl"] }

thiserror = { workspace = true }

[lints]
workspace = true
