[package]
name = "streamer"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true }
common = { workspace = true }

# TODO: remove when cross-rs compiles, fix openssl versions
openssl-src.workspace = true
openssl-sys.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread"] }
webrtc = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }

pem = { workspace = true }
rustls = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-log = "0.2"
cpal = "0.16.0"
opus = "0.3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_Ole", "Win32_System_StationsAndDesktops", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.54.0", features = ["Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }

[lints]
workspace = true
